--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ loader_version=0.14.19
 mod_version = 0.1.0
 maven_group = net.uku3lig
 archives_base_name = hitrange
+
+# Mod Dependencies
+ukulib_version = 0.6.1+1.19.4
