--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.2
-loader_version=0.14.19
+minecraft_version=1.20.4
+yarn_mappings=1.20.4+build.3
+loader_version=0.15.6
 
 # Mod Properties
-mod_version = 0.1.0
-maven_group = net.uku3lig
-archives_base_name = hitrange
+mod_version=0.1.0
+maven_group=net.uku3lig
+archives_base_name=hitrange
 
 # Mod Dependencies
-ukulib_version = 0.6.1+1.19.4
+ukulib_version=1.1.1+1.20.3
